solve_normals seems to work (on OSX)

--- a/SPLATT/Makefile
+++ b/SPLATT/Makefile
@@ -1,6 +1,8 @@
 INC_DIRS=${CBLAS_DIR}
 LIB_DIRS=${BLAS_LIBS}
-LIBS=-lblas -lgfortran -llapacke -lapack -lrefblas
+LIBS=-lblas
+#-lgfortran -llapacke
+#-llapacke -lapack -lrefblas
 MISC_FLAGS=--permit-unhandled-module-errors
 
 CHPL=chpl
