All is working it seems

--- a/SPLATT/Makefile
+++ b/SPLATT/Makefile
@@ -1,10 +1,19 @@
 INC_DIRS=${CBLAS_DIR}
 LIB_DIRS=${BLAS_LIBS}
 LIBS=-lopenblas -lpthread -lgfortran
-MISC_FLAGS=--permit-unhandled-module-errors
+MISC_FLAGS=--permit-unhandled-module-errors -O --specialize
+
+# This will turn off all runtime checks. It makes the code a lot faster
+# but defeats the purpose of Chapel, in a sense. But it is useful to use
+# to provide a "goal" for the code to reach
+FAST_FLAGS=--no-checks
+
+
 
 CHPL=chpl
 EXEC=./bin/splatt
+
+
 
 SOURCES=./src/*.chpl
 
